force-app/main/default/objects/Contact/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <formula>IF(Mark_for_archive__c, IMAGE(&quot;/resource/archiveimage&quot;, &quot;Archive&quot;, 50, 50), NULL)</formula>
    <label>Archived?</label>
    <type>Text</type>
</CustomField>