force-app/main/default/objects/Contact/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>