force-app/main/default/objects/Contact/validationRules/Client_report_to_is_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_report_to_is_Client</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Clients&apos; &amp;&amp; ReportsTo.RecordType.DeveloperName &lt;&gt; &apos;Clients&apos; &amp;&amp;
NOT(ISBLANK(ReportsToId))</errorConditionFormula>
    <errorDisplayField>ReportsToId</errorDisplayField>
    <errorMessage>Only contact of type clients can be selected</errorMessage>
</ValidationRule>