force-app/main/default/objects/Contact/validationRules/Employee_report_to_is_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_report_to_is_Employee</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Employee&apos; &amp;&amp; ReportsTo.RecordType.DeveloperName &lt;&gt; &apos;Employee&apos; &amp;&amp;
NOT(ISBLANK(ReportsToId))</errorConditionFormula>
    <errorDisplayField>ReportsToId</errorDisplayField>
    <errorMessage>Only contact of type employee can be selected</errorMessage>
</ValidationRule>