force-app/main/default/objects/Contact/listViews/Employees.listView-meta.xml
<ListView>
    <fullName>Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Employee</value>
    </filters>
    <label>Employees</label>
</ListView>